# junkcode

./: README.md
Signleton_Cat/: Cat_BritishShorthair.h
c++/Signleton_Cat/: Cat.h  Cat_Munchkin.h  Create_cat.cpp  Create_cat.h  main.cc
c++/emplace_push_back_with_rule_of_five/: main.cc  test_element.h
testcmake/Tests/: main.cpp
testcmake/Tests/T_ShimCacheParser/: CMakeLists.txt
